fix admin orders item on mobile

--- a/src/modules/Admin/components/Order/OrderHeader/index.less
+++ b/src/modules/Admin/components/Order/OrderHeader/index.less
@@ -15,7 +15,7 @@
     }
 
     @media @mobile {
-        grid-template-columns: repeat(1, 1fr);
+        display: none;
     }
 
     &__image {
